pv.yaml

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: datacentermgt
spec:
  selector:
    matchLabels:
      app: datacentermgt
  replicas: 1
  template:
    metadata:
      labels:
        app: datacentermgt
    spec:
      containers:
        - name: datacentermgt
          image: harbor.forticloud.com/sandbox/datacentermgt:v20.1_0195
          args: ["--spring.config.location=/etc/fcld/application.properties"]
          volumeMounts:
            - name: datacentermgt
              mountPath: /etc/fcld/application.properties
              subPath: application.properties
            - name: log
              mountPath: /var/forticloud_log/
          ports:
            - containerPort: 8080
      volumes:
        - name: datacentermgt
          configMap:
            name: datacentermgt
            items:
              - key: application.properties
                path: application.properties
        - name: log
          persistentVolumeClaim:
            claimName: sandbox-gui-pvc
