deployment_withmount.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: apiservice
spec:
  selector:
    matchLabels:
      app: apiservice
  replicas: 1
  template:
    metadata:
      labels:
        app: apiservice
    spec:
      containers:
        - name: apiservice
          image: 172.16.97.233:80/sandbox/apiservice:0167
          volumeMounts:
            - name: apiservice
              mountPath: /etc/fcld
          ports:
            - containerPort: 8080
      volumes:
        - name: apiservice
          configMap:
            name: apiservice

---

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: controller
spec:
  selector:
    matchLabels:
      app: controller
  replicas: 1
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
        - name: controller
          image: 172.16.97.233:80/sandbox/controller:0167
          volumeMounts:
            - name: controller
              mountPath: /etc/fcld
          ports:
            - containerPort: 8080
      volumes:
        - name: controller
          configMap:
            name: controller


---

apiVersion: apps/v1 # spring boot
kind: Deployment
metadata:
  name: datacentermgt
  namespace: sandboxdev
spec:
  selector:
    matchLabels:
      app: datacentermgt
  replicas: 1
  template:
    metadata:
      labels:
        app: datacentermgt
    spec:
      containers:
        - name: datacentermgt
          image: harbor.forticloud.com/sandbox/datacentermgt:v20.1_0195
          args: ["--spring.config.location=/etc/fcld/application.properties"]
          volumeMounts:
            - name: datacentermgt
              mountPath: /etc/fcld/application.properties
              subPath: application.properties
          ports:
            - containerPort: 8080
      volumes:
        - name: datacentermgt
          configMap:
            name: datacentermgt
            items:
              - key: application.properties
                path: application.properties
---
apiVersion: v1
kind: Service
metadata:
  name: datacentermgt
  namespace: sandboxdev
spec:
  selector:
    app: datacentermgt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
