multi_containers_one_pod.yaml

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: DaemonSet
metadata:
  name: two-container
spec:
  selector:
    matchLabels:
      app: two-container
  template:
    metadata:
      labels:
        app: two-container
    spec:
      volumes:
        - name: nginx-proxy-config
          configMap:
            name: nginx-gin-demo
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: nginx-proxy-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - containerPort: 80
        - name: gin-demo
          image: 172.16.97.233:80/sandbox/gin-demo:1.0
          ports:
            - containerPort: 8080

---


apiVersion: v1
kind: Service
metadata:
  name: two-container
  namespace: sandboxdev
spec:
  selector:
    app: two-container
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
