service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller
spec:
  selector:
    app: controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
