ingress.yaml
#helm install --name dev-ingresscontroller stable/nginx-ingress --namespace dev
#特别注意，ingress的命名空间必须与它反向代理的service所处的命名空间一致。
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: sandboxdev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: controller.sandbox.com
      http:
        paths:
          - path: /
            backend:
              serviceName: controller
              servicePort: 80
    - host: apiservice.sandbox.com
      http:
        paths:
          - path: /
            backend:
              serviceName: apiservice
              servicePort: 80
