ingress_withtls.yaml
#helm install --name dev-ingresscontroller stable/nginx-ingress --namespace dev
#特别注意，ingress的命名空间必须与它反向代理的service所处的命名空间一致。
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboar-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - dashboard.k8.com
      secretName: dashboard-secret
  rules:
    - host: dashboard.k8.com
      http:
        paths:
          - path: /
            backend:
              serviceName: dashboard-kubernetes-dashboard
              servicePort: 443

---


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ping-ingress
  namespace: sandboxdev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - ping.k8.com
      secretName: two-container-secret
  rules:
    - host: ping.k8.com
      http:
        paths:
          - path: /
            backend:
              serviceName: two-container
              servicePort: 80

#test case
#curl -vL --resolve ping.k8.com:443:172.16.97.173 https://ping.k8.com/ping
#curl -kvL --resolve ping.k8.com:443:172.16.97.173 https://ping.k8.com/ping
